# rust_project

./: Cargo.toml  README.md
src/: main.rs  prelude.rs
src/res/: map.rs  mod.rs  prelude.rs  states.rs  utils.rs
src/res/states/: main_menu.rs
